--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,43 @@
 /******** Variables *********/
-
 $bgColor: whitesmoke;
 $fontColor: black;
 $secColor: #007bff;
 
-/******** General Styles *******/
+/********* Media ************/
+@media only screen and (min-width: 600px){
+    /**** body *****/
+    .body-override{
+        font-family: 'Times New Roman', sans-serif ;
+        background-color: $bgColor;
+        
+    }
+    /******* headers *********/
+    h2, h3{
+        color: $fontColor;
+        
+    }
+}
+@media only screen and (max-width: 599px){
+    /******** body *******/
+    .body-override{
+        font-family: 'Times New Roman', sans-serif ;
+        background-color:#181818!important;
+        color: #a2a2a2 ;
+    }
+    /********* headers *********/
+    h2, h3{
+        color: #a2a2a2;
+        
+    }
+}
+@media print{
+    .button-resume, .link{
+        display: none;
+    }
 
+}
+
+/******** General Styles *******/
 *{
     margin: 0;
     padding: 0;
@@ -13,45 +45,48 @@ $secColor: #007bff;
     outline: 0;
     font-size: 100%;
     vertical-align: baseline;
+    
 }
-
+/*
 html{
     font-family: sans-serif;
-}
+}*/
 
-body{
-    width: 100%;
-    background-color: $bgColor ;
+p::selection {
+    color: white;
+    background-color: $secColor;
+}
+/********* Headers **********/
+h1 {
+    color: $secColor;
     
 }
 
-/********* Headers **********/
-
-h1 {
-    color: $secColor;
-}
-
-h2, h3{
-    color: $fontColor;
-}
 
 /********** Grid ***********/
-
 .container > div {
     padding-top: 50px;
 }
 
 /*********** Button **********/
-
 #button-section{
-    text-align: center;
     margin-top:5%;
+    padding-left: 50px;
 }
 
-.button-resume{
+.button-basic  {
+    border: none;
     padding: 10px 15px;
-    background-color: $secColor;
+    text-align: center;
+    font-size: 16px;
     border-radius: 5%;
+    cursor: pointer;
+  }
+
+.button-resume, input[type="submit"]{
+    @extend .button-basic;
+    background-color: $secColor;
+    color: white;
 }
 
 .link{
@@ -59,13 +94,19 @@ h2, h3{
     text-decoration: none;
 }
 
-.link:hover{
+.link:hover, input[type="submit"]:hover{
     color: blue;
     text-decoration: none;
 }
 
-/*********** Image *********/
+/********* Input Text ********/
+input[type="text"], textarea{
+    border: 2px solid black;
+    box-sizing: border-box;
+    resize: none;
+}
 
+/*********** Image *********/
 .myimg{
     text-align: center;
 }
@@ -76,7 +117,6 @@ h2, h3{
 }
 
 /*********** Table *********/
-
 table{
     width: 100%;
 }
@@ -89,17 +129,13 @@ td{
     }
 }
 /********** List ************/
-
 .col ul li{
         padding: 5px;
         margin-top: 5px;
         margin-left: 30px;
 }
 
-
-
 /********** Footer **********/ 
-
 footer{
     position: fixed;
     width: 100%;
@@ -108,4 +144,91 @@ footer{
     color: grey;
     text-align: center;
     padding-bottom: 15px;
+}
+
+
+/*=========================
+  Icons
+ ================= */
+
+/***** social icons ********/
+ul.social-network {
+	list-style: none;
+	display: inline;
+	margin-left:0 !important;
+    padding: 0;
+}
+ul.social-network li {
+	display: inline;
+    margin: 0 5px;
+}
+
+
+/********* social icons **********/
+.social-network a.icoRss:hover {
+	background-color: #F56505;
+}
+.social-network a.icoFacebook:hover {
+	background-color:#3B5998;
+}
+.social-network a.icoTwitter:hover {
+	background-color:#33ccff;
+}
+.social-network a.icoGoogle:hover {
+	background-color:#BD3518;
+}
+.social-network a.icoVimeo:hover {
+	background-color:#0590B8;
+}
+.social-network a.icoLinkedin:hover {
+	background-color:#007bb7;
+}
+.social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
+.social-network a.icoGoogle:hover i, .social-network a.icoVimeo:hover i, .social-network a.icoLinkedin:hover i {
+	color:#fff;
+}
+a.socialIcon:hover, .socialHoverClass {
+	color:#44BCDD;
+}
+
+.social-circle li a {
+	display:inline-block;
+	position:relative;
+	margin:0 auto 0 auto;
+	-moz-border-radius:50%;
+	-webkit-border-radius:50%;
+	border-radius:50%;
+	text-align:center;
+	width: 50px;
+	height: 50px;
+	font-size:20px;
+}
+.social-circle li i {
+	margin:0;
+	line-height:50px;
+	text-align: center;
+}
+
+.social-circle li a:hover i, .triggeredHover {
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-ms--transform: rotate(360deg);
+	transform: rotate(360deg);
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	transition: all 0.2s;
+}
+.social-circle i {
+	color:$secColor;
+	-webkit-transition: all 0.8s;
+	-moz-transition: all 0.8s;
+	-o-transition: all 0.8s;
+	-ms-transition: all 0.8s;
+	transition: all 0.8s;
+}
+
+a {
+ background-color: #D3D3D3;   
 }
